AWS_Project/PART1_Scripts/Terraform/PublicSubnet/securitygroup.tf
data "aws_cloudformation_export" "VpcID" {
  name = "MyVPCStack-VpcID"
}
resource "aws_security_group" "SG" {
    name = "aws_linuxsg1"
    vpc_id = data.aws_cloudformation_export.VpcID.value
    
    #inbound
    #http access
    ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  #SSH access
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  #https access
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  # Outbound Rules
  # Internet access to anywhere
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
    
}
